--- a/index.html
+++ b/index.html
@@ -1,25 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fara Eller Framtid</title>
-    <link rel="stylesheet" href="/index.css">
-</head>
-<body>
-    <div class="header"><b><img src="" alt=""></b> <h1>Fara Eller Framtid?</h1></div>
-            <div class="collection-hero-banner" style=""><div class="collection-hero-color-overlay" style="background-color:#000000">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fara eller Framtid?</title>
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/index.js" />
+    <link rel="icon" type="image/x-icon" href="/Logo.png" />
+  </head>
+  <body>
+    <div class="header">
+      <img src="/logo_large.png" alt="Logotyp" />
+      <h1>Fara eller Framtid?</h1>
+    </div>
+
+    <div class="episode">
+      <div class="episode_left">
+        <img src="/logo_large.png" alt="Avsnittsbild" />
+        <audio controls>
+          <source src="/fara_eller_framtid_tiktok.mp3" type="audio/mpeg" />
+        </audio>
+      </div>
+      <div class="episode_right">
+        <h2>Fara eller Framtid? TikTok</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+          delectus iure magnam facere labore cupiditate porro sit reiciendis
+          placeat modi, libero aliquam est. Esse hic ipsa, quae laboriosam autem
+          ab? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti
+          asperiores id sit perferendis quis laborum molestias consectetur
+          delectus quos a, repellat hic fugiat inventore illum error, neque
+          autem, similique minima. Lorem, ipsum dolor sit amet consectetur
+          adipisicing elit. Ex maxime aliquid, ipsa adipisci aliquam
+          necessitatibus recusandae fuga quaerat dolore perferendis distinctio
+          expedita, optio, officiis exercitationem placeat labore. Obcaecati,
+          odit perspiciatis. Lorem ipsum.
+        </p>
+      </div>
+    </div>
+
+    <!-- <div class="collection-hero-banner" style=""><div class="collection-hero-color-overlay" style="background-color:#000000">
             </div><div class="hero-radial-overlay"></div><div class="collection-hero-banner-content ">
                 <div class="collection-hero-image-container">
                     <a style="cursor:pointer" class="collection-hero-image" href="">
                         <div class="_1DW9L hero-image-loader">
                             <noscript><img alt="" src="" /></noscript><img alt="" class="_1bypR" src="">
                         </div></a></div><div class="hero-show-info "><div class="collection-hero-view">
-                            <a href=""><h1>Fara eller Framtid? TikTok</h1></a>
+                            <a hresf=""><h1>Fara eller Framtid? TikTok</h1></a>
                             <div class="truncated-paragraph "><p>Wild Thing is a long-form, narrative podcast about the obsessions that capture our imaginations. 
                             This sound-rich and deeply reported show examines the relationship between science and society—that point where scientific inquiry 
                             collides with our very human desire to find answers, even when there are </p></div></div><div class="hero-buttons-container">
-    <div class="hero-show-buttons "><button class="play-button-component play-button"><div class="play-button-content"><span><div class="play-image"><div></div></div></div></button><a class="hero-button-solid"></a></div>
-</body>
+    <div class="hero-show-buttons "><button class="play-button-component play-button"><div class="play-button-content"><span><div class="play-image"><div></div></div></div></button><a class="hero-button-solid"></a></div> -->
+  </body>
 </html>
