--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fara eller Framtid?</title>
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/index.js" />
-    <link rel="icon" type="image/x-icon" href="/Logo.png" />
+    <link rel="stylesheet" href="/other/index.css" />
+    <link rel="icon" type="image/x-icon" href="/other/Logo.png" />
   </head>
   <body>
     <div class="header">
-      <img src="/logo_large.png" alt="Logotyp" />
+      <img src="/other/logo_large.png" alt="Logotyp" />
       <a><h1>Fara eller Framtid?</h1></a>
     </div>
 
-      
-
     <div class="episode">
       <div class="episode_left">
-        <img src="/logo_large.png" alt="Avsnittsbild" />
+        <img src="/other/logo_large.png" alt="Avsnittsbild" />
         <audio controls>
-          <source src="/fara_eller_framtid_tiktok.mp3" type="audio/mpeg" />
+          <source
+            src="/other/fara_eller_framtid_tiktok.mp3"
+            type="audio/mpeg"
+          />
         </audio>
       </div>
       <div class="episode_right">
         <h2>Fara eller Framtid? TikTok</h2>
         <p>
-          I vår podcast så ska vi diskutera nutida uppfinningar med syftet att bedömma ifall dem är fara eller framtid. I detta avsnitt diskuterar vi den nya och mest populära socialmedia appen, TikTok. Deras kopplingar med Kinesiska regeringen, deras påverkan på människors beteende, deras otroligt välutvecklade algoritmer såvida som vi ställer frågan, är det TikTok som är verktyget eller är det vi?
+          I vår podcast så ska vi diskutera nutida uppfinningar med syftet att
+          bedömma ifall dem är fara eller framtid. I detta avsnitt diskuterar vi
+          den nya och mest populära socialmedia appen, TikTok. Deras kopplingar
+          med Kinesiska regeringen, deras påverkan på människors beteende, deras
+          otroligt välutvecklade algoritmer såvida som vi ställer frågan, är det
+          TikTok som är verktyget eller är det vi?
         </p>
       </div>
     </div>
-
-    
   </body>
 </html>
