Trailing slash removal

--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Fara eller Framtid?</title>
-    <link rel="stylesheet" href="other/index.css" />
-    <link rel="icon" type="image/x-icon" href="other/Logo.png" />
+    <link rel="stylesheet" href="other/index.css" >
+    <link rel="icon" type="image/x-icon" href="other/Logo.png" >
   </head>
   <body>
     <div class="header">
-      <img src="other/logo_large.png" alt="Logotyp" />
+      <img src="other/logo_large.png" alt="Logotyp" >
       <a><h1>Fara eller Framtid?</h1></a>
     </div>
 
     <div class="episode">
       <div class="episode_left">
-        <img src="other/logo_large.png" alt="Avsnittsbild" />
+        <img src="other/logo_large.png" alt="Avsnittsbild" >
         <audio controls>
-          <source
-            src="other/fara_eller_framtid_tiktok.mp3"
-            type="audio/mpeg"
-          />
+          <source src="other/fara_eller_framtid_tiktok.mp3" type="audio/mpeg" >
         </audio>
       </div>
       <div class="episode_right">
