Responsivity and new image

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fara eller Framtid?</title>
-    <link rel="stylesheet" href="other/index.css" >
-    <link rel="icon" type="image/x-icon" href="other/Logo.png" >
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="images/logo_small.png" />
   </head>
   <body>
+    <!--Header-->
     <div class="header">
-      <img src="other/logo_large.png" alt="Logotyp" >
-      <a><h1>Fara eller Framtid?</h1></a>
+      <img src="images/logo_large.png" alt="Logotyp" />
+      <h1>Fara eller Framtid?</h1>
     </div>
-
+    <!--Avsnitt 1-->
     <div class="episode">
       <div class="episode_left">
-        <img src="other/logo_large.png" alt="Avsnittsbild" >
+        <!--Bild och Uppspelning av ljudfil för avsnitt 1-->
+        <img src="images/tiktok_image_large.jpg" alt="Avsnittsbild" />
         <audio controls>
-          <source src="other/fara_eller_framtid_tiktok.mp3" type="audio/mpeg" >
+          <source src="audio/audio_tiktok.mp3" type="audio/mpeg" />
         </audio>
       </div>
+      <!--Titel och beskrivning för avsnitt 1-->
       <div class="episode_right">
         <h2>Fara eller Framtid? TikTok</h2>
         <p>
