--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="sv">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Fara eller Framtid?</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" type="image/x-icon" href="images/logo_small.png" />
+    <link rel="stylesheet" href="css/style.css" >
+    <link rel="icon" type="image/x-icon" href="images/logo_small.png" >
   </head>
   <body>
     <!--Header-->
     <div class="header">
-      <img src="images/logo_large.png" alt="Logotyp" />
+      <div class="title">
+      <img src="images/logo_large.png" alt="Logotyp" >
       <h1>Fara eller Framtid?</h1>
+      </div>
     </div>
     <!--Avsnitt 1-->
     <div class="episode">
       <div class="episode_left">
         <!--Bild och Uppspelning av ljudfil för avsnitt 1-->
-        <img src="images/tiktok_image_large.jpg" alt="Avsnittsbild" />
+        <img src="images/tiktok_image_large.jpg" alt="Avsnittsbild" >
         <audio controls>
-          <source src="audio/audio_tiktok.mp3" type="audio/mpeg" />
+          <source src="audio/audio_tiktok.mp3" type="audio/mpeg" >
         </audio>
       </div>
       <!--Titel och beskrivning för avsnitt 1-->
