Kontaktinformation & Om oss

--- a/index.html
+++ b/index.html
@@ -10,33 +10,36 @@
   </head>
   <body>
     <!--Header-->
-    <div class="header">
-      <div class="title">
-      <img src="images/logo_large.png" alt="Logotyp" >
-      <h1>Fara eller Framtid?</h1>
+    <header>
+      <div>
+        <img src="images/logo_large.png" alt="Logotyp" >
+        <h1>Fara eller Framtid?</h1>
       </div>
-    </div>
-    <!--Avsnitt 1-->
-    <div class="episode">
-      <div class="episode_left">
-        <!--Bild och Uppspelning av ljudfil för avsnitt 1-->
-        <img src="images/tiktok_image_large.jpg" alt="Avsnittsbild" >
-        <audio controls>
-          <source src="audio/audio_tiktok.mp3" type="audio/mpeg" >
-        </audio>
+      <a href="om_oss/">Om oss</a>
+    </header>
+    <main>
+      <!--Avsnitt 1-->
+      <div class="episode">
+        <div class="episode_left">
+          <!--Bild och Uppspelning av ljudfil för avsnitt 1-->
+          <img src="images/tiktok_image_large.jpg" alt="Avsnittsbild" >
+          <audio controls>
+            <source src="audio/audio_tiktok.mp3" type="audio/mpeg" >
+          </audio>
+        </div>
+        <!--Titel och beskrivning för avsnitt 1-->
+        <div class="episode_right">
+          <h2>Fara eller Framtid? TikTok</h2>
+          <p>
+            I vår podcast så ska vi diskutera nutida uppfinningar med syftet att
+            bedömma ifall dem är fara eller framtid. I detta avsnitt diskuterar
+            vi den nya och mest populära socialmedia appen, TikTok. Deras
+            kopplingar med Kinesiska regeringen, deras påverkan på människors
+            beteende, deras otroligt välutvecklade algoritmer såvida som vi
+            ställer frågan, är det TikTok som är verktyget eller är det vi?
+          </p>
+        </div>
       </div>
-      <!--Titel och beskrivning för avsnitt 1-->
-      <div class="episode_right">
-        <h2>Fara eller Framtid? TikTok</h2>
-        <p>
-          I vår podcast så ska vi diskutera nutida uppfinningar med syftet att
-          bedömma ifall dem är fara eller framtid. I detta avsnitt diskuterar vi
-          den nya och mest populära socialmedia appen, TikTok. Deras kopplingar
-          med Kinesiska regeringen, deras påverkan på människors beteende, deras
-          otroligt välutvecklade algoritmer såvida som vi ställer frågan, är det
-          TikTok som är verktyget eller är det vi?
-        </p>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
